Migration to the new Nexus (merging master). optional module migrated to J11, minor other changes.